--- a/frontend/src/components/bot/soundclip-tab/soundclip-tab.scss
+++ b/frontend/src/components/bot/soundclip-tab/soundclip-tab.scss
@@ -73,6 +73,9 @@
     }
     /********/
 
+    .card {
+        font-size: 1.2rem;
+    }
 }
 
 
